--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
   "name": "andreyors/dsn",
   "type": "library",
   "description": "DSN Parser",
+  "keywords": ["dsn", "parser", "dsn parser", "12 factor app"],
   "license": "MIT",
   "autoload": {
     "psr-4": {
@@ -17,12 +18,15 @@
     "php": "^5.6.0 || ^7.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^5.7"
+    "phpunit/phpunit": "^5.7 || ^7.0"
   },
   "authors": [
     {
       "name": "Andrey Orsoev",
       "email": "andrey.orsoev@gmail.com"
     }
-  ]
+  ],
+  "scripts": {
+    "test": "vendor/bin/phpunit"
+  }
 }
