--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ git:
 matrix:
   fast_finish: true
 
+sudo: false
+
 php:
   - 5.6
   - 7.0
@@ -22,6 +24,10 @@ after_success:
 
 notifications:
   email: false
+
+cache:
+  directories:
+    - $HOME/.composer/cache
 
 env:
   matrix:
