--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
     }
   },
   "require": {
-    "php": "^5.6.0 || ^7.0"
+    "php": "^5.6.0 || ^7.0",
+    "ext-pcre": "*"
   },
   "require-dev": {
     "phpunit/phpunit": "^5.7 || ^7.0"
