--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     }
   },
   "require": {
-    "php": "^5.6.0 || ^7.0",
+    "php": "^5.6.0 || ^7.0 || ^8.0",
     "ext-pcre": "*"
   },
   "require-dev": {
